--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.discord-icon {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url('./assets/discord-mark-white.svg')
+}
+
 #root {
   width: 100%;
   height: 100%;
