--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
   background-image: url('./assets/discord-mark-white.svg')
 }
 
+.spin {
+  transform: rotate(360deg);
+}
+
 #root {
   width: 100%;
   height: 100%;
