chore(style): Minor style updates

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,17 @@
   background-image: url('./assets/discord-mark-white.svg')
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .spin {
   transform: rotate(360deg);
 }
