--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('./assets/discord-mark-white.svg')
+  background-image: url('./assets/discord-mark-white.svg');
+  vertical-align: middle
 }
 
 .no-scrollbar::-webkit-scrollbar {
